--- a/AsosCodingStyle.Web/index.html
+++ b/AsosCodingStyle.Web/index.html
@@ -3,13 +3,16 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-</head>
-<body>
-    <div data-bind="component: 'app'"></div>
-
+    <link type="text/css" rel="stylesheet" href="/Styles/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="/Styles/bootstrap-theme.css" />
     <script src="/Scripts/libs/require.js"></script>
     <script src="/Scripts/require.config.js"></script>
     <script src="/Scripts/startup.js"></script>
+    <script src="/Scripts/libs/jquery.js"></script>
+    <script src="/Scripts/libs/bootstrap.js"></script>
+</head>
+<body>
+    <div data-bind="component: 'app'"></div>
 
     <script>
         require(['startup']);
