Commit some temporary experimental stuff

--- a/AsosCodingStyle.Web/index.html
+++ b/AsosCodingStyle.Web/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div data-bind="component: 'app'"></div>
+    <div data-bind="component: 'app2'"></div>
 
     <script>
         require(['startup']);
