--- a/AsosCodingStyle.Web/index.html
+++ b/AsosCodingStyle.Web/index.html
@@ -6,14 +6,13 @@
     <link type="text/css" rel="stylesheet" href="/Styles/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="/Styles/bootstrap-theme.css" />
     <script src="/Scripts/libs/require.js"></script>
-    <script src="/Scripts/require.config.js"></script>
-    <script src="/Scripts/startup.js"></script>
+    <script src="/Scripts/setup/require.config.js"></script>
+    <script src="/Scripts/setup/startup.js"></script>
     <script src="/Scripts/libs/jquery.js"></script>
     <script src="/Scripts/libs/bootstrap.js"></script>
 </head>
 <body>
-    <div data-bind="component: 'app'"></div>
-    <div data-bind="component: 'app2'"></div>
+    <div data-bind="component: 'testApp'"></div>
 
     <script>
         require(['startup']);
