More work on client side examples

--- a/AsosCodingStyle.JsUnitTests/SpecRunner.html
+++ b/AsosCodingStyle.JsUnitTests/SpecRunner.html
@@ -120,6 +120,7 @@
                 'jquery': 'libs/jquery',
                 'knockout': 'libs/knockout-latest.debug',
                 'text': '../../AsosCodingStyle.JsUnitTests/libs/stub-text-loader',
+                'lodash': 'libs/lodash',
                 'squire': '../../AsosCodingStyle.JsUnitTests/libs/squirejs/Squire'
             }
         });
