--- a/AsosCodingStyle.Web/index.html
+++ b/AsosCodingStyle.Web/index.html
@@ -12,7 +12,9 @@
     <script src="/Scripts/libs/bootstrap.js"></script>
 </head>
 <body>
-    <div data-bind="component: 'testApp'"></div>
+    <!-- can view the bootstrap theme used at https://bootswatch.com/cosmo/ -->
+
+    <div data-bind="component: 'testApp'" class="container-fluid"></div>
 
     <script>
         require(['startup']);
