Fix typescript release build and checkin some other code... client side not fully working yet

--- a/AsosCodingStyle.Web/index.html
+++ b/AsosCodingStyle.Web/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- can view the bootstrap theme used at https://bootswatch.com/cosmo/ -->
 
-    <div data-bind="component: 'testApp'" class="container-fluid"></div>
+    <div data-bind="component: 'order'" class="container"></div>
 
     <script>
         require(['startup']);
