Finish order items with styling changes. Included font-awesome.

--- a/AsosCodingStyle.Web/index.html
+++ b/AsosCodingStyle.Web/index.html
@@ -4,6 +4,8 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link type="text/css" rel="stylesheet" href="/Styles/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="/Styles/font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="/Styles/site.css" />
     <script src="/Scripts/libs/require.js"></script>
     <script src="/Scripts/setup/require.config.js"></script>
     <script src="/Scripts/setup/startup.js"></script>
